--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,8 @@
     min-height:400px;
 }
 
+
+
 .footer{
     background-color: #D1C4E9;
     margin:0px auto;
@@ -21,6 +23,10 @@
     margin:0px auto;
     background: #9575CD !important ;
     color:floralwhite;
+}
+
+.media-paddng {
+  padding: 30px;
 }
 
 address{
